--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "core-js": "^3.39.0",
-    "lucide-react": "^0.454.0",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
     "next": "^15.0.2",
     "react": "19.0.0-rc-4d577fd2-20241104",
     "react-dom": "19.0.0-rc-4d577fd2-20241104",
     "react-email": "^3.0.2",
-    "resend": "4.0.0"
+    "resend": "4.0.0",
+    "simple-icons": "^13.16.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.8.1",
