--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,14 @@ yarn-error.log*
 
 # env files (can opt-in for commiting if needed)
 .env*
+!.env.example
 
 # vercel
 .vercel
+
+# cloudflare
+.wrangler
+.worker-next
 
 # typescript
 *.tsbuildinfo
