--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: hanno-blog
     runtime: node
     plan: free
-    buildCommand: pnpm install --prod=false; pnpm build
-    startCommand: pnpm start
+    buildCommand: npm install --prod=false; npm run build
+    startCommand: npm run start
     autoDeploy: false
     envVars:
       - key: NODE_ENV
